<resources>
    <string name="app_name">Zalego</string>

    <!-- Strings related to login -->
    <string name="prompt_fname">First name</string>
    <string name="prompt_sname">Second name</string>
    <string name="prompt_uname">Username</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_up_head">Sign Up</string>
    <string name="or_sign_up_instead">Or Sign up instead.</string>
    <string name="zalego_login">Zalego Login</string>
    <string name="logout">LogOut</string>


</resources>
